<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="snl_lib_name" translatable="false">Shake Network Log</string>

    <string name="snl_url">URL</string>
    <string name="snl_overview" translatable="false">SUMMARY</string>
    <string name="snl_request_header" translatable="false">REQUEST HEADERS</string>
    <string name="snl_request_body" translatable="false">REQUEST BODY</string>
    <string name="snl_view_body_request" translatable="false">REQUEST</string>
    <string name="snl_view_body_response" translatable="false">RESPONSE</string>
    <string name="snl_view_body" translatable="false">SHOW BODY</string>
    <string name="snl_response_header" translatable="false">RESPONSE HEADERS</string>
    <string name="snl_response_body" translatable="false">RESPONSE BODY</string>

    <string name="snl_no_headers_label" translatable="false">No headers</string>
    <string name="snl_no_body_response_label" translatable="false">No body response</string>
    <string name="snl_no_body_request_label" translatable="false">No body request</string>

    <string name="snl_menu_export" translatable="false">Export</string>
    <string name="snl_menu_clear" translatable="false">Clear</string>
    <string name="snl_menu_refresh" translatable="false">Refresh</string>
</resources>