<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/statusBarBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mytoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/snl_colorPrimaryVariant"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/statusBarBackground"
        app:menu="@menu/detail_menu"
        app:theme="@style/ToolbarIconTheme"
        app:titleTextColor="@color/snl_white" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mytoolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                style="@style/ShakeNetworkLog.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snl_url" />

            <TextView
                android:id="@+id/networkCallDetailPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/snl_margin_m"
                android:textColor="@color/networkCallDetailPathColor"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="url" />

            <TextView
                style="@style/ShakeNetworkLog.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snl_overview" />

            <TextView
                android:id="@+id/networkCallDetailOverviewContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/snl_margin_m"
                android:textIsSelectable="true"
                tools:text="general info" />

            <TextView
                style="@style/ShakeNetworkLog.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snl_view_body" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/requestBodyButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/snl_margin_s"
                    android:padding="@dimen/snl_padding_m"
                    android:text="@string/snl_view_body_request" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/responseBodyButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/snl_margin_s"
                    android:padding="@dimen/snl_padding_m"
                    android:text="@string/snl_view_body_response" />

            </LinearLayout>

            <TextView
                style="@style/ShakeNetworkLog.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snl_request_header" />

            <TextView
                android:id="@+id/networkCallDetailRequestHeaderContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/snl_margin_m"
                android:textIsSelectable="true"
                tools:text="headers go here" />


            <TextView
                style="@style/ShakeNetworkLog.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snl_response_header" />

            <TextView
                android:id="@+id/networkCallDetailResponseHeaderContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/snl_margin_m"
                android:textIsSelectable="true"
                tools:text="headers go here" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>